# law-agent

./: .gitignore  README.md  app.py  app_checkpoint_20260320.py  estimate_tokens.py  pyproject.toml  resources.yaml
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: eval-nhom.md
data/: 38.2024.TT.NHNN.doc  Danh mục nghĩa vụ tuân thủ - TT38.2024.TT.NHNN.xlsx  Danh mục nghĩa vụ tuân thủ - TT83.2025.TT.NHNN.xlsx  Demo Danh mục nghĩa vụ tuân thủ pháp luật.xlsx  Few-shot-example.xlsx  PROMPT_TEMPLATE.md  create_compliance_excel.py  create_compliance_excel_83_2025.py  nhom_nghia_vu_description.md  test_output.xlsx
law_agent/: __init__.py  export.py  ops.py  workflow.py
law_agent/prompts/: __init__.py  action.py  classify.py
src/: chunker.py  document_reader.py  excel_writer.py  excel_writer_checkpoint_20260320.py  extractor.py  prompts.py  prompts_checkpoint_20260319.py  prompts_checkpoint_20260320.py
static/: app.js  index.html  style.css
work/: 83_2025_TT-NHNN_m_694233.doc  83_2025_TT-NHNN_m_694233.json  test_debug.json
