[project]
name = "law-agent"
version = "0.2.0"
description = "Legal obligation extractor powered by Hush AI"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "hush-ai>=0.1.9",
    "mammoth>=1.11.0",
    "olefile>=0.47",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "gradio>=6.9.0",
]
